# toolathlon-gym

./: .gitignore  Dockerfile  README.md  discover_tools.py  entrypoint.sh  requirements.txt  server.py
.github/workflows/: docker-publish.yml
configs/: global_configs.py  token_key_session.py
configs/mcp_servers/: 12306.yaml  arxiv-latex-mcp.yaml  arxiv_local.yaml  canvas.yaml  emails.yaml  excel.yaml  filesystem.yaml  google_calendar.yaml  google_forms.yaml  google_sheet.yaml  howtocook.yaml  memory.yaml  notion.yaml  npx-fetch.yaml  pdf-tools.yaml  playwright_with_chunk.yaml  pptx.yaml  scholarly_search.yaml  snowflake.yaml  terminal.yaml  woocommerce.yaml  word.yaml  yahoo-finance.yaml  youtube.yaml  youtube_transcript.yaml
local_servers/12306-mcp/: package-lock.json  package.json
local_servers/12306-mcp/src/: index.ts  types.ts
local_servers/Calendar-Autoauth-MCP-Server/: package-lock.json  package.json  smithery.yaml
local_servers/Calendar-Autoauth-MCP-Server/src/: index.ts  pg-calendar.ts
local_servers/HowToCook-mcp/: package.json  tsconfig.json
local_servers/Office-PowerPoint-MCP-Server/: pyproject.toml
local_servers/Office-Word-MCP-Server/: test_doc.docx
local_servers/Office-Word-MCP-Server/word_document_server/: main.py
local_servers/arxiv-latex-mcp/: pyproject.toml
local_servers/arxiv-latex-mcp/server/: main.py  pg_adapter.py
local_servers/arxiv-mcp-server/: CLAUDE.md  pyproject.toml
local_servers/cli-mcp-server/: CLAUDE.md  README.md  pyproject.toml
local_servers/cli-mcp-server/tests/: test_cli_mcp_server.py
local_servers/emails-mcp/: LICENSE  README.md  package-lock.json  pyproject.toml
local_servers/emails-mcp/src/: test_connection.py
local_servers/emails-mcp/src/emails_mcp/: __init__.py  __main__.py  server.py
local_servers/emails-mcp/src/emails_mcp/backends/: __init__.py  file_backend.py  imap_backend.py  pg_backend.py  smtp_backend.py
local_servers/emails-mcp/src/emails_mcp/config/: __init__.py  settings.py
local_servers/emails-mcp/src/emails_mcp/models/: __init__.py  config.py  email.py
local_servers/emails-mcp/src/emails_mcp/services/: __init__.py  draft_service.py  email_service.py  folder_service.py  search_service.py
local_servers/emails-mcp/src/emails_mcp/tools/: __init__.py  email_tools.py  folder_tools.py  management_tools.py
local_servers/emails-mcp/src/emails_mcp/utils/: __init__.py  email_parser.py  encode_decode.py  exceptions.py  validators.py
local_servers/filesystem/: package-lock.json
local_servers/google-forms-mcp/: .gitignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
local_servers/google-forms-mcp/memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
local_servers/google-forms-mcp/src/: get-refresh-token.ts  index.ts  pg-forms.ts
local_servers/mcp-canvas-lms/: CLAUDE.md  check_canvas_api.py  debug-quiz-questions.js  package-lock.json  package.json  test-complete-workflow.js  test-detailed-quiz.js  test-merged-quiz-questions.js  test-new-features.js  test-quiz-permissions-comparison.js  test-quiz-questions-fixed.js  test-quiz-start-debug.js  test-quiz-validation.js  test-real-submission.js  test-student-features.js  test-verify-events.js  test-verify-submission.js  tsconfig.json
local_servers/mcp-canvas-lms/src/: client.ts  index.ts  pg-canvas-router.ts  types.ts
local_servers/mcp-google-sheets/: pyproject.toml
local_servers/mcp-npx-fetch/: .gitignore  LICENSE  bun.lockb  package-lock.json  package.json  pnpm-lock.yaml
local_servers/mcp-scholarly/: CLAUDE.md  README.md  pyproject.toml
local_servers/mcp-snowflake-server/: CLAUDE.md  Dockerfile  README.md  example_connections.toml  pyproject.toml
local_servers/mcp-youtube-transcript/: .pre-commit-config.yaml  README.md  manifest.json  pyproject.toml  run_server.py  server.json
local_servers/mcp-youtube-transcript/src/mcp_youtube_transcript/: __init__.py
local_servers/mcp-youtube-transcript/tests/: test_mcp.py  test_server.py
local_servers/notion-mcp-server/: CLAUDE.md  package.json
local_servers/pdf-tools-mcp/: LICENSE  README.md  pyproject.toml
local_servers/pdf-tools-mcp/pdf_tools_mcp/: __init__.py  __main__.py  server.py
local_servers/playwright-mcp/: README.md  config.d.ts  package.json
local_servers/woocommerce-mcp/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
local_servers/yahoo-finance-mcp/: CLAUDE.md  pg_adapter.py  server.py  yfinance.py
local_servers/youtube-mcp-server/: CLAUDE.md  package.json  tsconfig.json
(+3299 files in other folders)
